<resources>
    <string name="app_name">Uber Rider Remake</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_exit">Sign Out</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="menu_slideshow">Sign Out</string>
    <string name="menu_edit_profile">Edit Profile</string>
    <string name="log_out">Log Out</string>
    <string name="permission_require">Location Permission Require\n</string>
    <string name="drivers_not_found">Drivers not found</string>
    <string name="key_not_found">Key Driver not found</string>
    <string name="welcome">Good afternoon\n</string>
    <string name="choose_a_saved_place">Choose a saved place</string>
    <string name="city_name_not_found">City Name not Found\n</string>
    <string name="title_activity_request_driver">RequestDriverActivity</string>
    <string name="maps_directions_api_key" translatable="false">AIzaSyAlOAmMTTK2Gg8veYFcDhj7H-EyXJjQhfo</string>
    <string name="pay_by_cash">Pay by Cash\n</string>
    <string name="confirm_uber">Confirm Uber\n</string>
    <string name="confirm_pickup_spot">Confirm pickup Spot</string>
    <string name="address_demo">Kadamb Vihar Mathura</string>
    <string name="confirm_pickup">Confirm Pickup</string>
    <string name="meet_driver_here">Meet driver here</string>
    <string name="finding_your_ride">Finding your Ride</string>
    <string name="token_not_found">Token not found</string>
    <string name="send_request_driver_failed">Request Driver Failed</string>
    <string name="uber_x">Hyundai Tycoon\n</string>
    <string name="car_number">ABC 123\n</string>
    <string name="driver_name_example">Sharma ji</string>
    <string name="ascii_dot">■</string>
    <string name="language_example">Knows English</string>
    <string name="distance">Distance =</string>
    <string name="charges">Fare =</string>
    <string name="okay">Okay</string>
    <string name="menu_history">History</string>

</resources>