<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:id="@+id/confirm_uber_layout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingTop="8dp"
        android:paddingBottom="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/activity_margin"
            android:paddingTop="8dp"
            android:paddingRight="@dimen/activity_margin"
            android:paddingBottom="8dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginRight="32dp"
                android:src="@drawable/baseline_money_24"
                app:tint="#737373" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/pay_by_cash"
                android:textColor="#737373"
                android:textSize="16sp"/>


            

        </LinearLayout>

            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/activity_margin"
            android:paddingTop="8dp"
            android:paddingRight="@dimen/activity_margin"
            android:paddingBottom="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/distance"
                android:textColor="#737373"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/txt_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_gravity="center_vertical"
                android:textStyle="bold"
                android:text="10 km"
                android:textColor="#737373"
                android:textSize="18sp"/>

        </LinearLayout>

            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/activity_margin"
            android:paddingTop="8dp"
            android:paddingRight="@dimen/activity_margin"
            android:paddingBottom="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/charges"
                android:textColor="#737373"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/txt_fare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_gravity="center_vertical"
                android:textStyle="bold"
                android:text="₹50"
                android:textColor="#737373"
                android:textSize="18sp"/>

        </LinearLayout>


        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/activity_margin"
        android:paddingTop="8dp"
        android:paddingRight="@dimen/activity_margin"
        android:paddingBottom="8dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_confirm_uber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@color/colorAccent"
            android:text="@string/confirm_uber"
            android:textColor="@android:color/white"
            android:paddingTop="12dp" />
        
        
    </LinearLayout>

    </LinearLayout>


</androidx.cardview.widget.CardView>