<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/driver_info_layout"
    android:background="@color/white"
    android:visibility="gone">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="8dp"
        android:background="@color/white"
        android:paddingBottom="8dp">


            <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/activity_margin"
        android:paddingTop="8dp"
        android:paddingRight="@dimen/activity_margin"
        android:paddingBottom="8dp">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/car_display"
                android:layout_marginLeft="50dp"/>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_driver"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/baseline_account_circle_24"/>

        </FrameLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentRight="true">

            <TextView
                android:id="@+id/txt_car_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/uber_x"
                android:fontFamily="@font/uber_move"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/txt_car_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/car_number"
                android:fontFamily="@font/uber_move"
                android:textColor="@color/black"
                android:textSize="20sp"/>


        </LinearLayout>

    </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:paddingLeft="@dimen/activity_margin"
                android:paddingTop="8dp"
                android:paddingRight="@dimen/activity_margin"
                android:paddingBottom="8dp">

                <TextView
                    android:id="@+id/txt_driver_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/driver_name_example"
                    android:fontFamily="@font/uber_move_bold"
                    android:textColor="@color/black"
                    android:textSize="14sp"/>


            </LinearLayout>

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:weightSum="12"
        android:paddingLeft="@dimen/activity_margin"
        android:paddingTop="8dp"
        android:paddingRight="@dimen/activity_margin"
        android:paddingBottom="8dp">

        <ImageView
            android:id="@+id/img_call_driver"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:src="@drawable/baseline_local_phone_24"/>

        <EditText
            android:id="@+id/edit_note"
            android:hint="Any Pickup Notes?"
            android:inputType="textMultiLine"
            android:textColorHint="@color/darker_gray"
            android:background="@android:drawable/edit_text"
            android:textColor="@color/black"
            android:layout_width="0dp"
            android:layout_weight="10"
            android:layout_height="40dp"
            android:layout_marginLeft="8dp" />

        <ImageView
            android:id="@+id/img_send_note"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:src="@drawable/baseline_wb_sunny_24"/>



    </LinearLayout>



    </LinearLayout>



</androidx.cardview.widget.CardView>